# teste

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
blog/: index.html
blog/R/: index.html
blog/conda/: index.html
blog/docker/: index.html
blog/frictionless/: index.html
blog/make/: index.html
blog/trilha-dev-git/: index.html
docs/: index.md
docs/blog/: R.md  conda.md  docker.md  frictionless.md  index.md  make.md  trilha-dev-git.md
